--- a/IT - Telefaune/Views/Salarie/ConsultForm.cshtml
+++ b/IT - Telefaune/Views/Salarie/ConsultForm.cshtml
@@ -1,11 +1,10 @@
 ﻿@model IT___Telefaune.Models.SalarieModel
 
-@if (ViewBag.sessionv != null)
-{
-    <form method="post" asp-action="Create">
+    <form method="" asp-action="">
+        <input asp-for="SalarieId" hidden />
         <div class="border p-3">
             <div class="form-group row">
-                <h2 class="text-black-50 pl-3">Créer un nouveau salarié</h2>
+                <h2 class="text-black-50 pl-3">Fiche salarié</h2>
             </div>
 
             <div class="row">
@@ -13,54 +12,49 @@
                     <div class="form-group row">
                         <div class="col">
                             <label asp-for="Nom">Nom</label>
-                            <input asp-for="Nom" class="form-control" />
+                            <input asp-for="Nom" disabled class="form-control" />
                             <span asp-validation-for="Nom" class="text-danger"></span>
                         </div>
                         <div class="col">
                             <label asp-for="Prenom">Prénom</label>
-                            <input asp-for="Prenom" class="form-control" />
+                            <input asp-for="Prenom" disabled class="form-control" />
                             <span asp-validation-for="Prenom" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="col">
                             <label asp-for="TelephoneFixe">Téléphone fixe</label>
-                            <input asp-for="TelephoneFixe" class="form-control" />
+                            <input asp-for="TelephoneFixe" disabled class="form-control" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="col">
                             <label asp-for="TelephonePortable">Téléphone portable</label>
-                            <input asp-for="TelephonePortable" class="form-control" />
+                            <input asp-for="TelephonePortable" disabled class="form-control" />
                             <span asp-validation-for="TelephonePortable" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="col">
                             <label asp-for="Email">Adresse Email</label>
-                            <input asp-for="Email" class="form-control" />
+                            <input asp-for="Email" disabled class="form-control" />
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="col-md-12">
-                            @Html.DropDownListFor(m => m.NomSiteWrong,
-                                new SelectList(Enum.GetValues(typeof(SiteList))),
-                                "Select Site")
+                        <div class="col">
+                            <label asp-for="NomSiteWrong">Site</label>
+                            <input asp-for="NomSiteWrong" disabled class="form-control" />
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="col-md-12">
-                            @Html.DropDownListFor(m => m.TypeServiceWrong,
-                                new SelectList(Enum.GetValues(typeof(ServiceList))),
-                                "Select Service")
+                        <div class="col">
+                            <label asp-for="TypeServiceWrong">Service</label>
+                            <input asp-for="TypeServiceWrong" disabled class="form-control" />
                         </div>
                     </div>
                     <div class="form-group row ">
                         <div class="col-8 row">
-                            <div class="col">
-                                <input type="submit" class="btn btn-info w-75" value="Enregistrer" />
-                            </div>
                             <div class="col">
                                 <a class="btn btn-dark" asp-action="Index">Retour</a>
                             </div>
@@ -70,11 +64,4 @@
             </div>
         </div>
     </form>
-}
-else
-{
-    <div class="card mt-5 p-5">
-        <h1 class="text-center text-danger m-auto">Vous n'êtes pas autorisé à accéder à cette page.</h1>
-    </div>
-}
 
