--- a/IT - Telefaune/Views/Admin/Index.cshtml
+++ b/IT - Telefaune/Views/Admin/Index.cshtml
@@ -1,13 +1,25 @@
 ﻿@model IEnumerable<IT___Telefaune.Models.AdminModel>
 
+@if (ViewBag.sessionv != null)
+{
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
             <h2 class="text-primary">Liste des Admins</h2>
         </div>
-        <div class="col-6 text-right">
-            <a asp-controller="Admin" asp-action="Create" class="btn btn-primary">Ajouter un Administrateur</a>
-        </div>
+        @if (ViewBag.sessionv == null)
+        {
+            <div class="col-6 text-right">
+                <button type="button" class="btn btn-primary mx-1" disabled>Ajouter un administrateur</button>
+            </div>
+        }
+
+        @if (ViewBag.sessionv != null)
+        {
+            <div class="col-6 text-right">
+                <a asp-controller="Admin" asp-action="Create" class="btn btn-primary">Ajouter un administrateur</a>
+            </div>
+        }
     </div>
 
     @if (Model.Count() > 0)
@@ -31,16 +43,34 @@
                 {
                 <tr class="align-items-lg-center">
                     <td class="text-center" width="40%">@admin.Email</td>
-                    <td width="10%">
-                        <div class="col-7">
-                            <a asp-controller="Admin" asp-route-Id="@admin.AdminId" asp-action="Update" class="btn btn-primary mx-2">Editer</a>
-                        </div>
-                    </td>
-                    <td width="10%">
-                        <div class="col-7 justify-content-md-center">
-                            <a asp-controller="Admin" asp-route-Id="@admin.AdminId" asp-action="DeleteGet" class="btn btn-danger mx-1">Supprimer</a>
-                        </div>
-                    </td>
+                    @if (ViewBag.sessionv == null)
+                    {
+                        <td width="15%">
+                            <div class="col-7">
+                                <button type="button" class="btn btn-primary mx-1" disabled>Editer</button>
+                            </div>
+                        </td>
+                        <td class="text-center" width="15%">
+                            <div class="col-7 justify-content-md-center">
+                                <button type="button" class="btn btn-danger mx-1" disabled>Supprimer</button>
+                            </div>
+                        </td>
+                    }
+
+
+                    @if (ViewBag.sessionv != null)
+                    {
+                        <td width="15%">
+                            <div class="col-7">
+                                <a asp-controller="Admin" asp-route-Id="@admin.AdminId" asp-action="Update" class="btn btn-primary mx-2">Editer</a>
+                            </div>
+                        </td>
+                        <td class="text-center" width="15%">
+                            <div class="col-7 justify-content-md-center">
+                                <a asp-controller="Admin" asp-route-Id="@admin.AdminId" asp-action="DeleteGet" class="btn btn-danger mx-1">Supprimer</a>
+                            </div>
+                        </td>
+                    }
                 </tr>
                 }
             </tbody>
@@ -52,3 +82,10 @@
         <p>Aucun administrateur n'a encore été enregistré...</p>
     }
 </div>
+}
+else
+{
+<div class="card mt-5 p-5" >
+    <h1 class="text-center text-danger m-auto">Vous n'êtes pas autorisé à accéder à cette page.</h1>
+</div>
+}
