--- a/IT - Telefaune/Views/Home/Index.cshtml
+++ b/IT - Telefaune/Views/Home/Index.cshtml
@@ -1,3 +1,19 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<IT___Telefaune.Models.SiteModel>
+
+@if (ViewBag.sessionv != null)
+{
+    <p class="text-center text-success">
+        Vous êtes connecté en tant que compte administrateur : @ViewBag.sessionv
+    </p>
 }
+
+<form method="post" asp-action="Index">
+    <div class="form-group">
+        <div class="input-group">
+            <input type="search" name="SearchString" class="form-control" placeholder="Rechercher" width="200" />
+            <span class="input-group-btn">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
+            </span>
+        </div>
+    </div>
+</form>
