--- a/IT - Telefaune/Views/Salarie/Update.cshtml
+++ b/IT - Telefaune/Views/Salarie/Update.cshtml
@@ -2,10 +2,11 @@
 
 @if (ViewBag.sessionv != null)
 {
-    <form method="post" asp-action="Create">
+    <form method="post" asp-action="Update">
+        <input asp-for="SalarieId" hidden />
         <div class="border p-3">
             <div class="form-group row">
-                <h2 class="text-black-50 pl-3">Créer un nouveau salarié</h2>
+                <h2 class="text-black-50 pl-3">Modifer la fiche salarié</h2>
             </div>
 
             <div class="row">
@@ -51,7 +52,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="col-md-12">
-                            @Html.DropDownListFor(m => m.TypeServiceWrong,
+                            @Html.DropDownListFor(m => m.TypeService,
                                 new SelectList(Enum.GetValues(typeof(ServiceList))),
                                 "Select Service")
                         </div>
