--- a/IT - Telefaune/Views/Site/Create.cshtml
+++ b/IT - Telefaune/Views/Site/Create.cshtml
@@ -1,48 +1,55 @@
 ﻿@model IT___Telefaune.Models.SiteModel
 
-<form method="post" asp-action="Create">
-    <div class="border p-3">
-        <div class="form-group row">
-            <h2 class="text-black-50 pl-3">Créer un nouveau site</h2>
-        </div>
+@ViewBag.test
 
-        <div class="row">
-            <div class="col-12">
-                <div class="form-group row">
-                    <div class="col">
-                        <label asp-for="Nom">Nom</label>
-                        <input asp-for="Nom" class="form-control" />
-                        <span asp-validation-for="Nom" class="text-danger"></span>
-                    </div>
-                    <div class="col">
-                        <label asp-for="Ville">Ville</label>
-                        <input asp-for="Ville" class="form-control" />
-                        <span asp-validation-for="Ville" class="text-danger"></span>
-                    </div>
+@if (ViewBag.sessionv != null)
+{
+    <form method="post" asp-action="Create">
+        <div class="border p-3">
+            <div class="form-group row">
+                <h2 class="text-black-50 pl-3">Créer un nouveau site</h2>
+            </div>
 
-                </div>
-                <div class="form-group row">
-                    <div class="col-md-12">
-                        @Html.DropDownListFor(m => m.TypeService,
-                            new SelectList(Enum.GetValues(typeof(ServiceList))), 
-                            "Select Service")
-                        @*<select id="Select1" asp-items="@(new SelectList(Model.DisplayData,"IdService", "TypeService"))">
-                            <option value="" disabled>-- Select --</option>
-                        </select>*@
-                    </div>
-                </div>
-                <div class="form-group row ">
-                    <div class="col-8 row">
+            <div class="row">
+                <div class="col-12">
+                    <div class="form-group row">
                         <div class="col">
-                            <input type="submit" class="btn btn-info w-75" value="Enregistrer" />
+                            <label asp-for="NomSite">Nom</label>
+                            <input asp-for="NomSite" class="form-control" />
+                            <span asp-validation-for="NomSite" class="text-danger"></span>
                         </div>
                         <div class="col">
-                            <a class="btn btn-dark" asp-action="Index">Retour</a>
+                            <label asp-for="Ville">Ville</label>
+                            <input asp-for="Ville" class="form-control" />
+                            <span asp-validation-for="Ville" class="text-danger"></span>
+                        </div>
+
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-12">
+                            @Html.DropDownListFor(m => m.TypeServiceWrong,
+                                new SelectList(Enum.GetValues(typeof(ServiceList))),
+                                "Select Service")
+                        </div>
+                    </div>
+                    <div class="form-group row ">
+                        <div class="col-8 row">
+                            <div class="col">
+                                <input type="submit" class="btn btn-info w-75" value="Enregistrer" />
+                            </div>
+                            <div class="col">
+                                <a class="btn btn-dark" asp-action="Index">Retour</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </form>
+}
+else
+{
+    <div class="card mt-5 p-5">
+        <h1 class="text-center text-danger m-auto">Vous n'êtes pas autorisé à accéder à cette page.</h1>
     </div>
-</form>
-
+}
