--- a/IT - Telefaune/Views/Site/DeleteGet.cshtml
+++ b/IT - Telefaune/Views/Site/DeleteGet.cshtml
@@ -1,38 +1,52 @@
 ﻿@model IT___Telefaune.Models.SiteModel
 
-<form method="post" asp-action="DeletePost">
-    <input asp-for="SiteId" hidden />
-    <div class="border p-3">
-        <div class="form-group row">
-            <h2 class="text-black-50 pl-3">Etes-vous sûr de vouloir supprimer ce site?</h2>
-        </div>
+@if (ViewBag.sessionv != null)
+{
+    <form method="post" asp-action="DeletePost">
+        <input asp-for="SiteId" hidden />
+        <div class="border p-3">
+            <div class="form-group row">
+                <h2 class="text-black-50 pl-3">Etes-vous sûr de vouloir supprimer ce site?</h2>
+            </div>
 
-        <div class="row">
-            <div class="col-12">
-                <div class="form-group row">
-                    <div class="col">
-                        <label asp-for="Nom"> Nom:</label>
-                        <input asp-for="Nom" disabled class="form-control" />
-                        <span asp-validation-for="Nom" class="text-danger"></span>
-                    </div>
-                    <div class="col">
-                        <label asp-for="Ville"> Ville :</label>
-                        <input asp-for="Ville" disabled class="form-control" />
-                        <span asp-validation-for="Ville" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="form-group row ">
-                    <div class="col-8 row">
+            <div class="row">
+                <div class="col-12">
+                    <div class="form-group row">
                         <div class="col">
-                            <input type="submit" class="btn btn-danger w-75" value="Supprimer" />
+                            <label asp-for="NomSite"> Nom:</label>
+                            <input asp-for="NomSite" disabled class="form-control" />
+                            <span asp-validation-for="NomSite" class="text-danger"></span>
                         </div>
                         <div class="col">
-                            <a class="btn btn-dark" asp-action="Index">Retour</a>
+                            <label asp-for="Ville"> Ville :</label>
+                            <input asp-for="Ville" disabled class="form-control" />
+                            <span asp-validation-for="Ville" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col">
+                            <label asp-for="TypeServiceWrong">Service</label>
+                            <input asp-for="TypeServiceWrong" disabled class="form-control" />
+                        </div>
+                    </div>
+                    <div class="form-group row ">
+                        <div class="col-8 row">
+                            <div class="col">
+                                <input type="submit" class="btn btn-danger w-75" value="Supprimer" />
+                            </div>
+                            <div class="col">
+                                <a class="btn btn-dark" asp-action="Index">Retour</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </form>
+}
+else
+{
+    <div class="card mt-5 p-5">
+        <h1 class="text-center text-danger m-auto">Vous n'êtes pas autorisé à accéder à cette page.</h1>
     </div>
-</form>
-
+}
